chore: rename project to Portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>ZenMoney Stocks</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <noscript>
