--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="favicon.ico">
+    <meta name="msapplication-TileColor" content="#03a9f4">
+    <meta name="theme-color" content="#03a9f4">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
-    <meta name="theme-color" content="#ffffff">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#03a9f4">
+
     <title>Portfolio</title>
+
   </head>
   <body>
     <noscript>
