Integrate React Router for the basic navigation

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
 
+    <base href="/">
     <meta charset="utf-8">
     <meta name="msapplication-TileColor" content="#03a9f4">
     <meta name="theme-color" content="#03a9f4">
