--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <base href="/">
+    <base href="<%= htmlWebpackPlugin.options.base %>">
     <meta charset="utf-8">
     <meta name="msapplication-TileColor" content="#03a9f4">
     <meta name="theme-color" content="#03a9f4">
