Migrate to Firebase Hosting, v1.1.4

--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
   <head>
 
-    <base href="<%= htmlWebpackPlugin.options.base %>">
     <meta charset="utf-8">
     <meta name="msapplication-TileColor" content="#03a9f4">
     <meta name="theme-color" content="#03a9f4">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="manifest" href="manifest.json">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#03a9f4">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#03a9f4">
 
     <title>Portfolio</title>
 
@@ -22,6 +21,5 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="app"></div>
-    <script src="bundle.js"></script>
   </body>
 </html>
